[package]
name = "in-memory-cache"
version = "1.0.0"
edition = "2021"
authors = ["toxicmaximalist"]
description = "A fast, thread-safe, in-memory cache with TTL and LRU eviction"
license = "MIT"
repository = "https://github.com/toxicmaximalist/in-memory-cache"
homepage = "https://github.com/toxicmaximalist/in-memory-cache"
documentation = "https://toxicmaximalist.github.io/in-memory-cache/in_memory_cache/"
readme = "README.md"
keywords = ["cache", "lru", "ttl", "concurrent", "memory"]
categories = ["caching", "data-structures", "concurrency"]
rust-version = "1.70"
exclude = [".github/*", "benches/*", "tests/*"]

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
indexmap = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bench]]
name = "cache_bench"
harness = false
